# birdview-egui

./: .gitignore  Cargo.toml  serial-protocol
.cargo/: config.toml
robot/: robot.ino
src/: app.rs  colorpicker.rs  img.rs  init.rs  lib.rs  main.rs  math.rs
src/data/: color.rs  mod.rs  point.rs
