cargo-features = ["strip"]

[package]
name = "birdview"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.14"
image = "*"
imageproc = { git = "https://github.com/image-rs/imageproc.git" } 
opencv = "0.54"
cgmath = "*"

[profile.release]
strip = true
lto = true
codegen-units = 1