cargo-features = ["strip"]

[package]
name = "birdview"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.14"
image = "*"
opencv = "0.54"
rayon = "1.5"
cgmath = "*"

[profile.release]
strip = true
lto = true
codegen-units = 1