cargo-features = ["strip"]

[package]
name = "birdview"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.14"
image = "*"
opencv = { version = "0.60", default-features = false, features = ["imgproc", "features2d", "flann", "videoio", "imgcodecs"]}
rayon = "1.5"
cgmath = "*"
serialport = "4"

[profile.release]
strip = true
lto = true
codegen-units = 1